--- a/agenda_db/.env
+++ b/agenda_db/.env
@@ -3,7 +3,7 @@ APP_PORT = 3000
 
 # DB CONFIG
 DB_USER = postgres
-DB_PASS = elaia
+DB_PASS = SENHA_USUARIO
 DB_HOST = localhost
 DB_PORT = 5432
 DB_DBAS = agenda
